Fixing bug and and router link of back login

--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -2,30 +2,16 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
     <title>Online Exam Management System</title>
-
-    <!-- Bootstrap core CSS -->
-    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Additional CSS Files -->
-    <!-- <link rel="stylesheet" href="assets/css/fontawesome.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/oems.css"> -->
-
   </head>
 
 <body>
-
-
-
   <!-- ***** Main Banner Area Start ***** -->
-  <!-- <app-faq></app-faq> -->
   <section class="section main-banner" id="top" data-section="section1">
     <router-outlet></router-outlet>
       <img src="../assets/images/courses-video.png" width="100%">
@@ -55,7 +41,7 @@
               </div>
               <div class="content-hide">
                 <p>&#x2022;Computer Science<br>&#x2022;Business Studies<br>&#x2022;Low and Justies<br>&#x2022;Mathematics<br>&#x2022;English</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+                <p class="hidden-sm">&#x2022;Computer Science<br>&#x2022;Business Studies<br>&#x2022;Low and Justies<br>&#x2022;Mathematics<br>&#x2022;English</p>
             </div>
             </div>
           </div>
@@ -68,7 +54,7 @@
               </div>
               <div class="content-hide">
                 <p>Online MCQ and Form based Exam, Review facilities, request for new courses, Personal dashboard.</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+                <p class="hidden-sm">Online MCQ and Form based Exam, Review facilities, request for new courses, Personal dashboard.</p>
             </div>
             </div>
           </div>
@@ -80,8 +66,8 @@
                 <h4><i class="fa fa-book"></i>Todays Quote</h4>
               </div>
               <div class="content-hide">
-                <p>"Some of the brightest minds in the country can be found on the last banches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
-                <p class="hidden-sm">"Some of the brightest minds in the country can be found on the last banches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
+                <p>"Some of the brightest minds in the country can be found on the last branches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
+                <p class="hidden-sm">"Some of the brightest minds in the country can be found on the last branches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
               </div>
             </div>
           </div>
@@ -109,18 +95,18 @@
               <article id='tabs-1' >
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="../assets/images/choose-us-image-01.png" alt="">
+                    <img src="assets/images/choose-us-image-01.jpg" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Qualified Teacher's</h4>
-                    <p>You will find here world class top qualifyed teacher from DU, BUET, JU. They have curiosity.This curiosity leads to an awareness of the challenges facing students in their own communities - especially those communities that are vulnerable in nature.</p>
+                    <p>You will find here world class top qualified teacher from DU, BUET, JU. They have curiosity.This curiosity leads to an awareness of the challenges facing students in their own communities - especially those communities that are vulnerable in nature.</p>
                   </div>
                 </div>
               </article>
               <article id='tabs-2'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="../assets/images/choose-us-image-02.png" alt="">
+                    <img src="assets/images/choose-us-image-02.png" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Best Judge Panel</h4>
@@ -131,11 +117,11 @@
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="../assets/images/choose-us-image-03.png" alt="">
+                    <img src="assets/images/choose-us-image-03.png" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>Student Friendly Interface</h4>
-                    <p>Your did not have any tansion to learn this system from sketch. It will very friendly environment to learn full of its features. It will offer you very smooth and fast respond feature.</p>
+                    <p>Your did not have any tension to learn this system from sketch. It will very friendly environment to learn full of its features. It will offer you very smooth and fast respond feature.</p>
                   </div>
                 </div>
               </article>
@@ -152,20 +138,20 @@
         <div class="col-md-6 align-self-center">
           <div class="left-content">
             <span></span>
-            <h4>Behind of the project<br><em>Who spand their valuable time</em></h4>
+            <h4>Behind of the project<br><em>Who spend their valuable time</em></h4>
 
             <br>
             <div>
-              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-1/309678270_4146596015565800_7623435530379665711_n.jpg?stp=c0.0.160.160a_dst-jpg_p160x160&_nc_cat=103&ccb=1-7&_nc_sid=7206a8&_nc_ohc=OLhXT00qKLoAX__RSmK&_nc_ht=scontent.fdac7-1.fna&oh=00_AfAPWHK6YKRDy67SdfXklnqkCo-ZuAu0k-IdpgCxRx-4bQ&oe=63AC1A92" alt="" width="100" height="100">
+              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-6/309678270_4146596015565800_7623435530379665711_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeG6ZBq6PgSGzzStY5JMxCMIIlOKhGn_1agiU4qEaf_VqIt3_gFYytKiPbe67VaFQdETl1PrgpZJDsuWhGI_zdMY&_nc_ohc=kOXWfdpFqIoAX8fuFYn&_nc_oc=AQlS8v0jgmbDs7Fy-O0ma_gr_oud2AAIOUsqzF39-6YEfIDnjBm5_K3d5x-7QMBVfTc&_nc_ht=scontent.fdac7-1.fna&oh=00_AfAAAYo5GuKVm583sI24BWnoTOCgNis006YnlNQG0vb2VQ&oe=63B02F94" alt="" width="100" height="100">
 
               <h5><a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda</a></h5>
               <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
             </div>
             <div>
-              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-6/313345198_3306731552925941_5704445586028302330_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SYAcx2G_ol0AX_uJT1y&_nc_ht=scontent.fdac7-1.fna&oh=00_AfBoKqtpvnS5iAqQqciXKxKnS_xqJmwd7KByNaS626so6g&oe=63AB0DE0" alt="" width="100" height="100">
+              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-1/313345198_3306731552925941_5704445586028302330_n.jpg?stp=dst-jpg_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=7206a8&_nc_eui2=AeHHepvRvar3f3psHF3eC1XfRjsqRRpvV3hGOypFGm9XeA3ou1YV0pdgT2BXc4A7328hpjSY-cUdLpIQ_dy0DBNN&_nc_ohc=8K82un4uC94AX8_vHR0&_nc_oc=AQmMfRfcY8L8qLdwx967xYGy8ubKr4xNSYQL6kDaCA_cZ6Fh6dY0JZFmYC40pWEgvog&_nc_ht=scontent.fdac7-1.fna&oh=00_AfBV4J0H1ZP-35D23VG3_ZgOQGv6-A6DIjiN0hf-iuj_4g&oe=63B1AA5E" alt="" width="100" height="100">
 
               <h5><a href="https://www.linkedin.com/in/sourav-das-9b988923a/" target="_blank" rel="noopener noreferrer">Sourav Das</a></h5>
-              <p>Student at Department of CSE, SEU<br>ML Expart</p>
+              <p>Student at Department of CSE, SEU<br>ML Expert</p>
             </div>
           </div>
         </div>
@@ -175,7 +161,7 @@
               <h4>Friendship Forever</h4>
             </div>
             <figure>
-              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="../assets/images/main-thumb.png"></a>
+              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="assets/images/main-thumb.png"></a>
             </figure>
           </article>
         </div>
@@ -188,7 +174,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
-            <h2>Use This Massege Box to contact with us</h2>
+            <h2>Use This Massage Box to contact with us</h2>
             <h2>OR</h2>
             <h2>admins.oems@gmail.com</h2>
           </div>
@@ -247,64 +233,5 @@
       </div>
     </div>
   </footer>
-
-  <!-- Scripts -->
-  <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <script src="../assets/js/tabs.js"></script>
-    <script src="../assets/js/custom.js"></script>
-    <script src="../assets/js/navbar.js"></script>
-    <script>
-        //according to loftblog tut
-        $('.nav li:first').addClass('active');
-
-        var showSection = function showSection(section, isAnimate) {
-          var
-          direction = section.replace(/#/, ''),
-          reqSection = $('.section').filter('[data-section="' + direction + '"]'),
-          reqSectionPos = reqSection.offset().top - 0;
-
-          if (isAnimate) {
-            $('body, html').animate({
-              scrollTop: reqSectionPos },
-            800);
-          } else {
-            $('body, html').scrollTop(reqSectionPos);
-          }
-
-        };
-
-        var checkSection = function checkSection() {
-          $('.section').each(function () {
-            var
-            $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-            if (topEdge < wScroll && bottomEdge > wScroll) {
-              var
-              currentId = $this.data('section'),
-              reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-              reqLink.closest('li').addClass('active').
-              siblings().removeClass('active');
-            }
-          });
-        };
-
-        $('.main-menu, .scroll-to-section').on('click', 'a', function (e) {
-          if($(e.target).hasClass('external')) {
-            return;
-          }
-          e.preventDefault();
-          $('#menu').removeClass('active');
-          showSection($(this).attr('href'), true);
-        });
-
-        $(window).scroll(function () {
-          checkSection();
-        });
-    </script>
 </body>
 </html>
