--- a/src/app/all-component/public/registration-teacher/registration-teacher.component.css
+++ b/src/app/all-component/public/registration-teacher/registration-teacher.component.css
@@ -2,7 +2,12 @@
   width: 49%;
   padding: 2px;
 }
-
+a{
+  color: white;
+  font-size:15px;
+  text-decoration: none;
+  margin: 13px;
+}
 mat-card{
   background-color: #0c1228;
   margin: 0 auto;
