--- a/src/app/all-component/public/registration-teacher/registration-teacher.component.html
+++ b/src/app/all-component/public/registration-teacher/registration-teacher.component.html
@@ -56,10 +56,9 @@
         <input  type='Password' matInput placeholder="Your Password" name = "Password" ngModel required>
       </mat-form-field>
       <button class ="signup" mat-raised-button color="primary" type='submit'>SIGNUP</button>
-
-
     </form>
   </mat-card-content>
+  <a (click)="backlogin()">Back To Login</a>
 </mat-card>
 </body>
 
