add /api in service

--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.html
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.html
@@ -14,9 +14,9 @@
             <li><a href="#section3">Developer</a></li>
           </ul>
         </li>
-        <li><a routerLink="public-dashboard/faq">FAQ</a></li>
+        <li><a href="public-dashboard/faq">FAQ</a></li>
         <li><a href="#section4">Contact</a></li>
-        <li><a routerLink="public-dashboard/t&c" >T&C</a></li>
+        <li><a href="public-dashboard/t&c" >T&C</a></li>
       </ul>
     </nav>
   </header>
