--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <title>Online Exam Management System</title>
   </head>
-
+<router-outlet></router-outlet>
 <body>
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
-    <router-outlet></router-outlet>
+
       <img src="../assets/images/courses-video.png" width="100%">
 
       <div class="video-overlay header-text">
@@ -37,7 +37,7 @@
           <div class="features-post">
             <div class="features-content">
               <div class="content-show">
-                <h4><i class="fa fa-pencil"></i>All Department</h4>
+                <h4><i class="dept"></i>All Department</h4>
               </div>
               <div class="content-hide">
                 <p>&#x2022;Computer Science<br>&#x2022;Business Studies<br>&#x2022;Low and Justies<br>&#x2022;Mathematics<br>&#x2022;English</p>
@@ -50,7 +50,7 @@
           <div class="features-post second-features">
             <div class="features-content">
               <div class="content-show">
-                <h4><i class="fa fa-graduation-cap"></i>Features</h4>
+                <h4><i class="topFeature"></i>Features</h4>
               </div>
               <div class="content-hide">
                 <p>Online MCQ and Form based Exam, Review facilities, request for new courses, Personal dashboard.</p>
@@ -63,7 +63,7 @@
           <div class="features-post third-features">
             <div class="features-content">
               <div class="content-show">
-                <h4><i class="fa fa-book"></i>Todays Quote</h4>
+                <h4><i class="quote"></i>Todays Quote</h4>
               </div>
               <div class="content-hide">
                 <p>"Some of the brightest minds in the country can be found on the last branches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
