--- a/src/app/all-component/public/registration-teacher/registration-teacher.component.html
+++ b/src/app/all-component/public/registration-teacher/registration-teacher.component.html
@@ -1,31 +1,31 @@
 <body>
 <mat-card>
-  <mat-card-title>Registation As Teacher</mat-card-title>
+  <mat-card-title>Registration As Teacher</mat-card-title>
   <mat-card-content>
     <button mat-raised-button color="primary" style="margin: 5px;" (click)="goToRegStdPage()">Student</button>
     <button mat-raised-button color="accent" >Teacher</button>
-    <form class="example-form" #thisFormType = "ngForm" (submit)="registerTeacher(thisFormType)">
+    <form class="example-form" [formGroup]="regTecForm" (ngSubmit)="registerTeacher()">
       <mat-form-field class="example-full-width">
         <mat-label class="name">NID</mat-label>
-        <input matInput placeholder="NID NUMBER" ngModel required name = "nid">
+        <input matInput placeholder="NID NUMBER" formControlName = "nid">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label class="name">Name</mat-label>
-        <input matInput placeholder="Your Full Name" ngModel required name = "userName">
+        <input matInput placeholder="Your Full Name"  formControlName = "userName">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Father Name</mat-label>
-        <input matInput placeholder="Your Fater Full Name" ngModel required name = "fatherName">
+        <input matInput placeholder="Your Father Full Name"  formControlName = "fatherName">
       </mat-form-field>
 
       <mat-form-field class="example-full-width ">
         <mat-label >Mother Name</mat-label>
-        <input matInput placeholder="Your Mother Full Name" ngModel required name = "motherName">
+        <input matInput placeholder="Your Mother Full Name"  formControlName = "motherName">
       </mat-form-field>
 
-      <mat-radio-group aria-label="Gander" >
+      <mat-radio-group aria-label="Gander"  formControlName = "gender">
         <mat-label>Gender</mat-label><br>
         <mat-radio-button value="1">Male</mat-radio-button>
         <mat-radio-button value="2">Female</mat-radio-button>
@@ -34,48 +34,51 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Contact Number</mat-label>
-        <input matInput placeholder="+880" name = "contactNo" ngModel required>
+        <input matInput placeholder="+880" formControlName = "contactNo">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="@email.com" name = "email" ngModel required>
+        <input matInput placeholder="@email.com" formControlName = "email">
       </mat-form-field>
 
-      <mat-form-field class="example-full-width">
+      <mat-form-field appearance="fill">
         <mat-label>Date-of-Birth</mat-label>
-        <input  matInput placeholder="DD-MM-YYY" name = "dob" ngModel required>
+        <input matInput [matDatepicker]="picker" formControlName="dob" >
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Address</mat-label>
-        <input   matInput placeholder="Mirpur, Dhaka" name = "address" ngModel required>
+        <input   matInput placeholder="Mirpur, Dhaka" formControlName = "address">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Password</mat-label>
-        <input  type='Password' matInput placeholder="Your Password" name = "password" ngModel required>
+        <input  type='Password' matInput placeholder="Your Password">
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Confirm Password</mat-label>
-        <input  type='Password' matInput placeholder="Your Password" name = "password" ngModel required>
+        <input  type='Password' matInput placeholder="Your Password" formControlName = "password">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Education Qualification</mat-label>
-        <input  matInput placeholder="BSC in CSE" name = "eduQualification" ngModel required>
+        <input  matInput placeholder="BSC in CSE" formControlName = "eduQualification">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Expert</mat-label>
-        <input  matInput placeholder="Machine Learning" name = "expertise" ngModel required>
+        <input  matInput placeholder="Machine Learning" formControlName = "expertise">
       </mat-form-field>
 
 
       <button class ="signup" mat-raised-button color="primary" type='submit'>SIGNUP</button>
     </form>
   </mat-card-content>
-  <a (click)="backlogin()">Back To Login</a>
+  <a (click)="backLogin()">Back To Login</a>
 </mat-card>
 </body>
 
