fix date re-formating issue  & estublish successfull connection for teacher signup form

--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -142,7 +142,7 @@
 
             <br>
             <div>
-              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-6/309678270_4146596015565800_7623435530379665711_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeG6ZBq6PgSGzzStY5JMxCMIIlOKhGn_1agiU4qEaf_VqIt3_gFYytKiPbe67VaFQdETl1PrgpZJDsuWhGI_zdMY&_nc_ohc=kOXWfdpFqIoAX8fuFYn&_nc_oc=AQlS8v0jgmbDs7Fy-O0ma_gr_oud2AAIOUsqzF39-6YEfIDnjBm5_K3d5x-7QMBVfTc&_nc_ht=scontent.fdac7-1.fna&oh=00_AfAAAYo5GuKVm583sI24BWnoTOCgNis006YnlNQG0vb2VQ&oe=63B02F94" alt="" width="100" height="100">
+              <img style="float: left; padding:8px;" src="https://media.licdn.com/dms/image/D5603AQEJA4GQPv2IWg/profile-displayphoto-shrink_800_800/0/1667802976969?e=2147483647&v=beta&t=m6IONerAXBM8SC1iyXTTx90qcLLSwgIycF_022ZJoh8" alt="" width="100" height="100">
 
               <h5><a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda</a></h5>
               <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
