--- a/src/app/all-component/public/tnc/tnc.component.html
+++ b/src/app/all-component/public/tnc/tnc.component.html
@@ -1,4 +1,9 @@
 <body class="body-class">
   <h1 class = 'tt'>Terms And Condition</h1>
-  <p>{{f}}</p>
+  <h1>Introduction</h1>
+  <p>{{Introduction}}</p><br>
+  <p>{{AccessAndUseOfTheWebsite}}</p><br>
+  <p>{{Privacy}}</p><br>
+  <p>{{Instructor}}</p><br>
+  <p>{{star}}</p>
 </body>
