tnc decoration implement success full

--- a/src/app/all-component/public/registration-teacher/registration-teacher.component.css
+++ b/src/app/all-component/public/registration-teacher/registration-teacher.component.css
@@ -35,6 +35,7 @@ button{
 body{
   padding-top: 130px;
   background-image: url(../../../../assets/images/choosing-bg.jpg);
+  height: auto;
 
 }
 .example-full-width{
