--- a/src/app/all-component/public/tnc/tnc.component.html
+++ b/src/app/all-component/public/tnc/tnc.component.html
@@ -1,9 +1,13 @@
 <body class="body-class">
   <h1 class = 'tt'>Terms And Condition</h1>
-  <h1>Introduction</h1>
-  <p>{{Introduction}}</p><br>
-  <p>{{AccessAndUseOfTheWebsite}}</p><br>
-  <p>{{Privacy}}</p><br>
-  <p>{{Instructor}}</p><br>
+  <h3>Introduction :</h3>
+  <p>{{Introduction}}</p>
+  <h3>Access And Use Of The Website :</h3>
+  <p>{{AccessAndUseOfTheWebsite}}</p>
+  <h3>Privacy :</h3>
+  <p>{{Privacy}}</p>
+  <h3>Instruction for teacher :</h3>
+  <p>{{Instructor}}</p>
+  <h3>Remark :</h3>
   <p>{{star}}</p>
 </body>
