--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-public-dashboard></app-public-dashboard>
-<router-outlet></router-outlet>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <p><i class="fa fa-copyright"></i> Copyright 2022 by OEMS Team </p>
+      </div>
+    </div>
+  </div>
+</footer>
