--- a/src/app/all-component/public/tnc/tnc.component.css
+++ b/src/app/all-component/public/tnc/tnc.component.css
@@ -3,10 +3,18 @@
   color: white;
   text-align: center;
 }
+h3{
+  margin-left: 30px;
+  color: white;
+
+}
 p{
+  margin-left: 30px;
+  margin-right: 40px;
   color: #7abaff;
 }
 .body-class{
   background-image: url(/../../../../assets/images/choosing-bg.jpg);
   background-color: #172238;
+  height: auto;
 }
