--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.css
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.css
@@ -46,13 +46,12 @@ a {
   font-weight: 800;
   color: #fff;
 }
+
 .main-header .logo a em {
   font-style: normal;
   color: #0399FF;
   display: flex;
   letter-spacing:1px;
-
-
 }
 
 .main-menu {
@@ -69,7 +68,7 @@ a {
 }
 
 .main-menu li:first-child {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .main-menu li a {
@@ -85,7 +84,7 @@ a {
 
 .main-menu li.has-submenu a:after {
   content: '\f107';
-  font-family: "FontAwesome";
+  font-family: "FontAwesome", serif;
   margin-left: 5px;
 }
 
@@ -97,6 +96,7 @@ a {
   position: absolute;
   width: 160px;
   background-color: #18233a;
+
   opacity: 0;
   visibility: hidden;
   transition: all 0.5s;
@@ -110,7 +110,7 @@ a {
 .main-menu li .sub-menu li {
   display: block;
   line-height: 20px;
-  margin-left: 0px;
+  margin-left: 0;
   margin-bottom: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid #121b2f;
@@ -121,14 +121,14 @@ a {
 }
 
 .main-menu li .sub-menu li:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   border-bottom: none;
 }
 
 .main-menu li .sub-menu li a {
   font-size: 12px;
   font-weight: 500;
-  padding: 0px 15px;
+  padding: 0 15px;
   letter-spacing: 1px;
   border: none;
   transition: all 0.5s;
@@ -143,56 +143,65 @@ a {
 .main-nav li.active a {
   border: 2px solid #0399FF;
 }
+.hamburger{
+  display: none;
+  color:#fff;
+  font-size:32px;
+  margin:16px;
 
-@media (max-width: 950px) {
-  .main-nav li:hover a,
-  .main-nav li.active a {
-    border: 2px solid transparent;
-    border-bottom: 1px solid rgba(250,250,250,0.25);
-  }
 }
-@media screen and (max-width: 950px) {
-  .main-menu { padding-right: 0!important; }
-  .main-header .logo {
-    line-height: 73px;
+@media only screen and (max-width:767px){
+  .main-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  .main-menu li {
-    display: block;
-    line-height: 1;
-    margin-left: 0 !important;
+  .main-header .logo a em {
+    font-size:24px;
+    display: flex;
+    align-items: center;
   }
+  .logo-image{
+    width:50px;
+    height:58px;
+  }
+  .main-menu{
+    position:absolute;
+    z-index: 1;
+    right:0;
+    top:0;
+    display:none;
+  }
+  .hamburger{
+    display:block;
+    cursor: pointer;
+    padding: 10px;
 
-  .main-menu li .sub-menu {
-    opacity: 1;
-    visibility: visible;
-    position: static;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
   }
-  .main-menu li .sub-menu li:last-child {
-    border-bottom: 1px solid rgba(250,250,250,0.25);
-  }
-}
+  .hamburger:hover + .main-menu{
 
-/* logo image shirink */
-.logo-image{
-  transition: 1s;
-}
-.logo em{
-  transition:1s
-}
-.first-image{
-  transition: .5s;
-}
-.first-image em{
-  font-size:26px;
-  margin-bottom:5px;
-}
+    display: flex;
+    flex-direction: column;
+    background: rgba(22,34,57,.95);
 
 
-.first-image img {
-  width: 60px;
-  height: 65px;
-  margin-bottom: 10px;
+  }
+  .main-menu:hover{
+    display: flex;
+    flex-direction: column;
+    background: rgba(22,34,57,.95);
+  }
+  .sub-menu  {
+    z-index: 1;
+    left:50%;
+    transform: translateX(-50%);
+
+  }
+
 }
+
+
+
+
+
+
