--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.html
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.html
@@ -4,8 +4,8 @@
       <a routerLink="home"><em><img class="logo-image" src="../assets/images/logo.png" alt="Submit" width="75" height="75">
          OEMS</em></a>
     </div>
-    <a href="#menu" class="menu-link"></a>
     <nav id="menu" class="main-nav" role="navigation">
+      <i class="fa fa-bars hamburger" aria-hidden="true" ></i>
       <ul class="main-menu">
         <li><a href="#top">Home</a></li>
         <li class="has-submenu"><a>About Us</a>
@@ -18,8 +18,9 @@
         <li><a href="#section4">Contact</a></li>
         <li><a href="public-dashboard/t&c" >T&C</a></li>
       </ul>
+
+
     </nav>
   </header>
 
   <router-outlet></router-outlet>
-
