some problem fix

--- a/src/app/all-component/public/tnc/tnc.component.html
+++ b/src/app/all-component/public/tnc/tnc.component.html
@@ -1,4 +1,4 @@
-<body class="body-class">
+<div class="body-class">
   <h1 class = 'tt'>Terms And Condition</h1>
   <h3>Introduction :</h3>
   <p>{{Introduction}}</p>
@@ -10,4 +10,4 @@
   <p>{{Instructor}}</p>
   <h3>Remark :</h3>
   <p>{{star}}</p>
-</body>
+</div>
