--- a/src/app/all-component/public/faq/faq.component.html
+++ b/src/app/all-component/public/faq/faq.component.html
@@ -1,4 +1,8 @@
-<body class="body-class">
+<div class="body-class">
   <h1 class="tt">Frequently Ask Question?</h1>
-  <h1 >{{f}}</h1>
-</body>
+
+  <div *ngFor="let QA of questionAns | keyvalue">
+    Key: <b>{{QA.key}}</b> and Value: <b>{{QA.value}}</b>
+  </div>
+
+</div>
