--- a/src/app/all-component/public/registration/registration.component.html
+++ b/src/app/all-component/public/registration/registration.component.html
@@ -79,7 +79,7 @@
       <button class ="signup" mat-raised-button color="primary"  type='submit' >SIGNUP</button>
     </form>
   </mat-card-content>
-  <a (click)="backlogin()">Back To Login</a>
+  <a (click)="backLogin()">Back To Login</a>
 </mat-card>
 </body>
 
