--- a/src/app/all-component/public/tnc/tnc.component.html
+++ b/src/app/all-component/public/tnc/tnc.component.html
@@ -1,13 +1,13 @@
 <div class="body-class">
   <h1 class = 'tt'>Terms And Condition</h1>
   <h3>Introduction :</h3>
-  <p>{{Introduction}}</p>
+  <p>{{Introduction}}</p><br><br>
   <h3>Access And Use Of The Website :</h3>
-  <p>{{AccessAndUseOfTheWebsite}}</p>
+  <p>{{AccessAndUseOfTheWebsite}}</p><br><br>
   <h3>Privacy :</h3>
-  <p>{{Privacy}}</p>
+  <p>{{Privacy}}</p><br><br>
   <h3>Instruction for teacher :</h3>
-  <p>{{Instructor}}</p>
+  <p>{{Instructor}}</p><br><br>
   <h3>Remark :</h3>
-  <p>{{star}}</p>
+  <p>{{star}}</p><br><br>
 </div>
