Remove feature area(all dept, ftateue, quate)

--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -19,53 +19,6 @@
   </section>
   <!-- ***** Main Banner Area End ***** -->
 
-
-  <section class="features">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-12">
-          <div class="features-post">
-            <div class="features-content">
-              <div class="content-show">
-                <h4><i class="dept"></i>All Department</h4>
-              </div>
-              <div class="content-hide">
-                <p>&#x2022;Computer Science<br>&#x2022;Business Studies<br>&#x2022;Low and Justies<br>&#x2022;Mathematics<br>&#x2022;English</p>
-                <p class="hidden-sm">&#x2022;Computer Science<br>&#x2022;Business Studies<br>&#x2022;Low and Justies<br>&#x2022;Mathematics<br>&#x2022;English</p>
-            </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-12">
-          <div class="features-post second-features">
-            <div class="features-content">
-              <div class="content-show">
-                <h4><i class="topFeature"></i>Features</h4>
-              </div>
-              <div class="content-hide">
-                <p>Online MCQ and Form based Exam, Review facilities, request for new courses, Personal dashboard.</p>
-                <p class="hidden-sm">Online MCQ and Form based Exam, Review facilities, request for new courses, Personal dashboard.</p>
-            </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-12">
-          <div class="features-post third-features">
-            <div class="features-content">
-              <div class="content-show">
-                <h4><i class="quote"></i>Todays Quote</h4>
-              </div>
-              <div class="content-hide">
-                <p>"Some of the brightest minds in the country can be found on the last branches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
-                <p class="hidden-sm">"Some of the brightest minds in the country can be found on the last branches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="section why-us" id="section2">
     <div class="container">
       <div class="row">
@@ -204,7 +157,7 @@
             <p>Angular, Html, CSS, JavaScript</p>
             <br>
             <h5>Backend Built with:</h5>
-            <p>Java, Spring Boot, Thymeleaf, JDBC,<br> JWT, Spring Security, restfull API's,<br>maintain MVC design pattern</p>
+            <p>Java, Spring Boot, Thymeleaf, JDBC,<br> JWT, Spring Security, restfull APIs,<br>maintain MVC design pattern</p>
             <br>
             <h5>Databases:</h5>
             <p>MYSQL</p>
