re routing the all section fix dashboard problem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-public-dashboard></app-public-dashboard>
+<router-outlet></router-outlet>
 <footer>
   <div class="container">
     <div class="row">
