--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -30,9 +30,9 @@
         <div class="col-md-12">
           <div id='tabs'>
             <ul>
-              <li><a href='#tabs-1' >Qualified Teacher's</a></li>
-              <li><a href='#tabs-2'>Best Judge Panel</a></li>
-              <li><a href='#tabs-3'>Student Friendly Interface</a></li>
+              <li><a routerLink='/public-dashboard/home/' fragment='tabs-1' >Qualified Teacher's</a></li>
+              <li><a routerLink='/public-dashboard/home/' fragment='tabs-2'>Best Judge Panel</a></li>
+              <li><a routerLink='/public-dashboard/home/' fragment='tabs-3'>Student Friendly Interface</a></li>
             </ul>
             <section class='tabs-content'>
               <article id='tabs-1' >
@@ -91,7 +91,7 @@
               <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
             </div>
             <div>
-              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-1/313345198_3306731552925941_5704445586028302330_n.jpg?stp=dst-jpg_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=7206a8&_nc_eui2=AeHHepvRvar3f3psHF3eC1XfRjsqRRpvV3hGOypFGm9XeA3ou1YV0pdgT2BXc4A7328hpjSY-cUdLpIQ_dy0DBNN&_nc_ohc=8K82un4uC94AX8_vHR0&_nc_oc=AQmMfRfcY8L8qLdwx967xYGy8ubKr4xNSYQL6kDaCA_cZ6Fh6dY0JZFmYC40pWEgvog&_nc_ht=scontent.fdac7-1.fna&oh=00_AfBV4J0H1ZP-35D23VG3_ZgOQGv6-A6DIjiN0hf-iuj_4g&oe=63B1AA5E" alt="" width="100" height="100">
+              <img style="float: left; padding:8px;" src="assets/images/sourav.jpg" alt="" width="100" height="100">
 
               <h5><a href="assets/images/sourav.jpg" target="_blank" rel="noopener noreferrer">Sourav Das</a></h5>
               <p>Student at Department of CSE, SEU<br>ML Expert</p>
