--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url(assets/css/fontawesome.css);
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+:root{
+  --black:#000;
+  --headerfoterh:60px;
 
+}
 
 *{
   scroll-behavior: smooth;
