--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.css
@@ -1,5 +1,3 @@
-
-
 *{
   margin:0;
   padding:0;
@@ -10,12 +8,13 @@ ul{
 }
 body{
   margin:0;
-  padding:0;;
+  padding:0;
 
 
 }
 .container{
   width:100%;
+  margin-top: var(--headerfoterh);
 
 }
 
@@ -23,25 +22,31 @@ body{
 
 .sidebar{
   width:200px;
-  background-color: #343a40;
-  min-height:calc(100vh - var(--headerfoterh) - var(--headerfoterh) - 13px);
-  position:absolute;
+  background-color: rgba(22,34,57,1);
+  min-height:calc(100vh - var(--headerfoterh));
+  position:fixed;
   transition:.5s;
 
 
   transform:translateX(0px);
 
 }
-.showsidebar{
+.show-sidebar{
   transform:translateX(-200px);
 }
 .right-body{
   background-color:lightgray;
-  width:calc(100% - 200px);
-  min-height:calc(100vh - var(--headerfoterh) - var(--headerfoterh) - 13px);
-  padding-left: 200px;
+  width:calc(100% - 210px);
+  min-height:calc(100vh - var(--headerfoterh) - var(--headerfoterh));
+  padding-left: calc(200px + 10px);
+  padding-top: 10px;
   transition: .5s;
 
+}
+.no-padding{
+  padding-left:10px;
+  transition:.5s;
+  width: 100%;
 }
 .fa-user{
   color: #ffffff;
@@ -79,20 +84,7 @@ body{
   display: flex;
   flex-direction: column;
 }
-.hamburger{
 
-  width: 40px;
-  padding-top: 20px;
-  padding-left: 20px;
-  cursor: pointer;
-  position: fixed;
-  top: -8px;
-  left: 0;
-  font-size: 30px;
-  color: #ffff;
-
-
-}
 
 /*header css*/
 a {
@@ -108,7 +100,6 @@ a {
 .main-header {
   background-color: rgba(22,34,57,0.95);
   height: var(--headerfoterh);
-
   z-index: 12;
   width: 100%;
   top: 0;
@@ -116,17 +107,19 @@ a {
   display:flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
 
 }
 
 .main-header .logo {
-  float: left;
+  /*float: left;*/
   line-height: 60px;
   padding-left: 10px;
+  margin: auto;
 }
 
 .main-header .logo a {
-  font-size: 36px;
+  font-size: 31px;
   text-transform: uppercase;
   font-weight: 800;
   color: #fff;
@@ -184,10 +177,10 @@ a {
   transition: all 0.5s;
 }
 
-
 .main-menu li:hover .sub-menu {
   opacity: 1;
   visibility: visible;
+
 }
 
 .main-menu li .sub-menu li {
@@ -218,8 +211,7 @@ a {
 }
 /*sidebar submenu*/
 .left-nav{
-  padding:18px;
-  padding-top:60px;
+  padding: 5px 18px 18px;
   list-style: none;
 }
 .left-nav li.has-left-sub-menu  a:after {
@@ -237,7 +229,7 @@ a {
 
 }
 .left-menu a{
-  font-size:20px;
+  font-size:15px;
   color:#fff;
   padding:0 8px;
 }
@@ -252,9 +244,9 @@ a {
   transition:.5s;
 }
 
-.has-left-sub-menu:hover .left-sub-menu{
+ .left-sub-menu-show{
   height:auto;
-  padding:15px;
+  padding:14px;
   transition:.5s;
 
 }
@@ -267,4 +259,23 @@ a {
   display: inline-block;
   padding:4px 0;
 }
+/*hamburger-icon*/
 
+.icon{
+  position:fixed;
+  top: 16px;
+  z-index:12;
+  left:18px;
+  cursor: pointer;
+  font-size: 30px;
+  color: #ffff;
+}
+.color-icon{
+  color:#fff;
+  transition:.5s;
+}
+
+.icon-style{
+  padding: 0;
+  color: #fff;
+}
