--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,7 @@
-<header class="main-header" role="header">
+<header class="main-header">
+
   <div class="logo">
-    <a routerLink="home"><em><img class="logo-image" src="assets/images/logo.png" alt="Submit" width="75" height="75">
+    <a><em><img class="logo-image" src="assets/images/logo.png" alt="Submit" >
       OEMS</em></a>
   </div>
   <nav id="menu" class="main-nav" role="navigation">
@@ -15,39 +16,40 @@
   </nav>
 </header>
 <div class="container">
-  <div class="sidebar">
+  <div class="{{sidebarOpened ? 'show-sidebar sidebar': 'sidebar'}}">
     <div>
-      <div class="link-header">
 
-        <i class="fa fa-bars hamburger" aria-hidden="true" ></i>
-      </div>
+
       <nav id="" class="left-nav" role="navigation">
-        <ul class="left-menu">
-          <li class="has-left-sub-menu"><i class="fa fa-user" aria-hidden="true"></i><a>{{username}}</a>
-            <ul class="left-sub-menu" >
-              <li><a routerLink='not-assign-yet' fragment='not-assign'>Profile</a></li>
-              <li><a routerLink='login'>Logout</a></li>
+        <ul class= "left-menu">
+          <li ><span class="material-icons icon-style">dashboard</span><a>Dashboard</a></li>
+        </ul>
+        <ul class= "left-menu" (click)="toggleNavbar()">
+          <li class="has-left-sub-menu"><span class="material-icons icon-style">group</span><a>Teacher List</a>
+            <ul class="{{navbarOpened ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu-hide left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'>Present Teacher's</a></li>
+              <li><a routerLink='login'>Pending Teachers</a></li>
             </ul>
           </li>
         </ul>
-        <ul class="left-menu">
-          <li class="has-left-sub-menu"><i class="fa fa-user" aria-hidden="true"></i><a>{{username}}</a>
-            <ul class="left-sub-menu" >
-              <li><a routerLink='not-assign-yet' fragment='not-assign'>Profile</a></li>
-              <li><a routerLink='login'>Logout</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="left-menu">
-          <li class="has-left-sub-menu"><i class="fa fa-user" aria-hidden="true"></i><a>{{username}}</a>
-            <ul class="left-sub-menu" >
-              <li><a routerLink='not-assign-yet' fragment='not-assign'>Profile</a></li>
-              <li><a routerLink='login'>Logout</a></li>
+        <ul class= "left-menu" (click)="toggleNavbar()">
+          <li class="has-left-sub-menu"><span class='material-icons icon-style'>groups</span><a>Student List</a>
+            <ul class="{{navbarOpened ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu-hide left-sub-menu'}}" >
+              <li><a routerLink='not-assign-yet' fragment='not-assign'>Present Students</a></li>
+              <li><a routerLink='login'><span class='material-icons icon-style'>person_add_alt</span>Pending Student</a></li>
             </ul>
           </li>
         </ul>
       </nav>
     </div>
+
   </div>
-  <div class="right-body">dsasdfas</div>
+  <div class=" {{sidebarOpened ? 'no-padding right-body': 'right-body'}}">
+    All content is here
+    <router-outlet></router-outlet>
+  </div>
+ <i class=" {{sidebarOpened ? 'color-icon fa fa-bars icon': 'fa fa-bars icon'}}" (click)="toggleSidebar()"></i>
+
+
+
 </div>
